# Projojo

./: .cursorrules  .env.example  .env.preview  .env.production  .env.test  .gitignore  .prettierrc  AGENTS.md  DEPLOYMENT_ARCHITECTURE.md  DESIGN.md  ENV_FILES_README.md  README.md  SOFTWARE_GUIDEBOOK.md  Taskfile.yml  create_typedb.sh  docker-compose.base.yml  docker-compose.preview.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  docker-start.ps1  docker-start.sh  github-project.env  settings.env  skills-lock.json  start.sh
projojo_backend/: .dockerignore  .env.example  Dockerfile  README.md  data_small_single_query.tql  initDatabase.py  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  select_users.tql
projojo_backend/auth/: README.md  dependencies.py  jwt_handler.py  jwt_middleware.py  jwt_utils.py  oauth_config.py  permissions.py
projojo_backend/config/: __init__.py  settings.py
projojo_backend/controllers/: test_controller.py
projojo_backend/db/: QUERY_MODULE_PLAN.md  __init__.py  example_select_users.tql  initDatabase.py  reset_test_database.py  schema.tql  schema_generator.md  seed.tql  seed.tql.backup-pre-cleanup  test_seed.tql  tql_safe_formatter.py
projojo_backend/exceptions/: __init__.py  exceptions.py  global_exception_handler.py
projojo_backend/models/: project.py  skill.py  task.py  user.py
projojo_backend/repositories/: base.py  business_repository.py  project_repository.py  skill_repository.py  task_repository.py  user_repository.py
projojo_backend/routes/: auth_router.py  business_router.py  (+13 more)
(+495 files in other folders)
