[project]
name = "projojo-backend"
version = "0.1.0"
description = "Projojo Backend API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "click==8.1.8",
    "fastapi==0.115.8",
    "h11==0.14.0",
    "httptools==0.6.4",
    "idna==3.10",
    "pydantic==2.10.6",
    "pydantic_core==2.27.2",
    "python-dotenv==1.0.1",
    "PyYAML==6.0.2",
    "sniffio==1.3.1",
    "starlette==0.45.3",
    "typedb-driver==3.4.0",
    "typing_extensions==4.12.2",
    "uvicorn==0.34.0",
    "uvloop==0.21.0",
    "watchfiles==1.0.4",
    "websockets==15.0",
    "python-multipart==0.0.20",
    "pyjwt==2.10.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
